--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
 
   <div class="minha-div">
-    <p class="paragrafo1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non diam nec est bibendum tristique vel nec ligula.</p>
-    <p class="paragrafo2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed aliquam metus sit amet neque posuere, nec suscipit libero fringilla.</p>
+    <p class="paragrafo1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper ligula eget lectus cursus ultrices. Phasellus facilisis lorem ut metus ullamcorper cursus eu id erat. Cras est nisi, convallis a enim in, eleifend consectetur eros. Nunc ac dolor sed ligula aliquam condimentum finibus id magna. Proin eu lorem consectetur, condimentum ante id, mollis ligula. Duis et felis ac velit bibendum ultricies ut quis nunc. Proin porttitor, turpis vitae vestibulum faucibus, nulla magna placerat nulla, non commodo dolor leo eget lectus. Donec nec purus faucibus, tempus nisl tincidunt, hendrerit ligula. Sed volutpat, elit id ultrices lacinia, orci velit sollicitudin sapien, et finibus turpis libero sed nisl. Phasellus eget aliquet dui, in eleifend odio. Ut id ante nibh. Quisque cursus, libero vitae dignissim lobortis, augue felis ultrices quam, fermentum dictum nisl arcu sed mauris.</p>
+    <p class="paragrafo2">In risus nisl, maximus in arcu et, ornare convallis lorem. Mauris molestie congue ipsum, vulputate pellentesque leo viverra sit amet. Aliquam tempus lorem ut efficitur porta. Sed tellus quam, consectetur vel rutrum in, mattis sed mauris. Fusce suscipit neque id augue bibendum pretium. Nulla sed turpis nec mi pellentesque tincidunt non ac tortor. Maecenas scelerisque, orci eget pretium pellentesque, ligula erat tincidunt lacus, eget cursus neque metus vitae sem. Curabitur dolor libero, viverra a lorem non, convallis vehicula nisi. Duis ultrices erat ut tincidunt varius. Etiam sodales sapien at commodo varius. Curabitur et ex leo. Pellentesque a porta erat. Suspendisse elit dolor, finibus non augue eu, sodales laoreet lacus. Donec pharetra libero velit, non rhoncus orci viverra eu.</p>
   </div>
 
   <div class="minha-div">
